Fix overflow in display pad of large numbers

--- a/styles.css
+++ b/styles.css
@@ -51,14 +51,24 @@ body {
   background-color: black;
   border-radius: 0.5rem;
 }
-#display {
+#displayPad {
   background-color: #a4c080;
   color: #111;
   width: 100%;
   height: 20%;
   border: 1px solid black;
-  font-size: 3rem;
+  font-size: 2.5rem;
   box-sizing: border-box;
+  display: flex;
+  align-items: end;
+}
+#display {
+  text-align: right;
+  word-break: break-word;
+  white-space: normal;
+  overflow-wrap: break-word;
+  overflow: hidden;
+  width: 100%;
 }
 #keypad {
   box-sizing: border-box;
